Drop groups from individual fancybox images

--- a/pelican-bootstrap3/templates/fancybox.html
+++ b/pelican-bootstrap3/templates/fancybox.html
@@ -1,6 +1,6 @@
 {% macro fancybox(thumb, src, desc='', class='') -%}
 <figure {% if class %}class="{{class}}"{% endif %}>
-  <a class="fancybox" rel="group" id="single_image" href="{{src}}">
+  <a class="fancybox" id="single_image" href="{{src}}">
     <img src="{{thumb}}" />
   </a>
     {% if desc %}
