Add tip box and adjust add this template

--- a/pelican-bootstrap3/templates/article.html
+++ b/pelican-bootstrap3/templates/article.html
@@ -91,6 +91,7 @@
             {% include 'includes/related-posts.html' %}
             {% include 'includes/series.html' %}
             {% include 'includes/addthis.html' %}
+            {% include 'includes/tip-box.html' %}
             {% include 'includes/shariff.html' %}
             {% include 'includes/comments.html' %}
         </article>
