--- a/pelican-bootstrap3/templates/includes/addthis.html
+++ b/pelican-bootstrap3/templates/includes/addthis.html
@@ -3,7 +3,7 @@
     <!-- AddThis Button BEGIN -->
     <div class="addthis_toolbox addthis_default_style">
         {% if ADDTHIS_FACEBOOK_LIKE|default(true) %}
-            <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+            <a class="addthis_button_facebook_share" fb:share:layout="button_count"></a>
         {% endif %}
         {% if ADDTHIS_TWEET|default(true) %}
             <a class="addthis_button_tweet"></a>
